replace from 'new Integer' to 'Integer.valueOf'